fix spacing on front page button links

--- a/themes/catching-the-spirit/sass/_content.scss
+++ b/themes/catching-the-spirit/sass/_content.scss
@@ -61,7 +61,7 @@ img {
     cursor: pointer;
     margin: 5px 0;
     @include desktop {
-        margin: 0;
+        margin: 0 0 2rem 0;
         width: 180px;
     }
     &:hover {
