--- a/themes/catching-the-spirit/sass/_testimonials.scss
+++ b/themes/catching-the-spirit/sass/_testimonials.scss
@@ -11,7 +11,6 @@
             &:focus {
                 border-width: 2px;
                 outline: none;
-                
             }
         }
 
@@ -23,28 +22,27 @@
         .gform_footer input[type=submit] {
             @extend .blue-btn;
             @include desktop {
-                width: 450px;
+                width: 500px;
                 height: 55px;
             }
         }
-.ginput_container_post_image{
-         display: flex !important;
-         justify-content: center !important;
-
-         margin-top:30px !important;
-     }
-    
-     input[type=submit] {
-         box-shadow: none;
-         text-shadow: none;
-         width: 170px;
-         padding: 0;
-         margin: 16px auto;
-         @extend .blue-btn;
-         @include desktop {
-             padding: 10px;
-         }
-     }
+        .ginput_container_post_image{
+            display: flex !important;
+            justify-content: center !important;
+            margin-top:30px !important;
+        }
+        
+        input[type=submit] {
+            box-shadow: none;
+            text-shadow: none;
+            width: 170px;
+            padding: 0;
+            margin: 16px auto;
+            @extend .blue-btn;
+            @include desktop {
+                padding: 10px;
+            }
+        }
         #field_3_1,
         #field_3_2 {
             padding: 0;
@@ -73,10 +71,19 @@
             .entry-content {
                 margin-bottom: 2rem;
             }
+            @include desktop {
+                display: flex;
+                margin-bottom: 2.5rem;
+                .post-name {
+                    flex: 1 1 33%;
+                }
+                .entry-content {
+                    flex: 2 1 66%;
+                }
+            }
         }
     }
 }
-
 #gform_3{
     @include desktop{
      margin-top:-80px;
